# xcol

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: alignment.rs  cli.rs  main.rs
